Updated styles in style.css to improve container design

--- a/style.css
+++ b/style.css
@@ -929,6 +929,7 @@ li {
         width: 295px;
     }
     .l-box{
+        margin-top:5rem;
         width: 40%;
         margin-left: 10rem;
     }
